--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 >
                   <img
                     class="img-fluid rounded-circle"
-                    src="./assets/images/icon.png"
+                    src="assets/images/profile.png"
                     alt="Fayed Image."
                     loading="lazy"
                   />
@@ -640,9 +640,8 @@
                   </div>
                 </div>
                 <h4>WhatsApp</h4>
-                <a href="http://wa.me/+201015395516" target="_blank"
-                  >Open WhatsApp</a
-                >
+                <a href="http://wa.me/+201015395516" target="_blank">
+                  Open WhatsApp</a>
               </div>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -657,8 +656,8 @@
                   </div>
                 </div>
                 <h4>Email</h4>
-                <a href="mailto:ahmedammer777@gmail.com"
-                  >ahmedammer777@gmail.com</a
+                <a href="mailto:mahmoudfayed3897@gmail.com"
+                  >mahmoudfayed3897@gmail.com</a
                 >
               </div>
             </div>
@@ -689,7 +688,7 @@
                   </div>
                 </div>
                 <h4>LinkedIn</h4>
-                <a href="#" target="_blank">Mahmoud Fayed</a>
+                <a href="https://www.linkedin.com/in/mah-fayed/" target="_blank">Mahmoud Fayed</a>
               </div>
             </div>
           </div>
@@ -704,13 +703,15 @@
         <!-- start footer grid -->
         <div class="footer-grid mx-3">
           <!-- About Column -->
-          <div class="footer-about">
-            <div class="footer-logo">ARCH•VISION</div>
+          <div class="footer-about position-relative">
+            <h4 class="footer-logo">MAHMOUD FAYED</h4>
             <p class="footer-quote">
-              "We don't just design buildings, we craft experiences that stand
-              the test of time. Every line tells a story, every space inspires
-              emotion."
+              "Architecture is my language. Through thoughtful design, I create
+              spaces that speak to both tradition and innovation."
             </p>
+            <div class="footer-about-layer">
+              <i class="fa-solid fa-compass-drafting"></i>
+            </div>
           </div>
 
           <!-- Quick Links Column -->
@@ -730,20 +731,21 @@
             <h4 class="footer-heading">Featured Projects</h4>
             <ul class="footer-links">
               <li><a href="project1.html">Obhour Mosque</a></li>
-              <li><a href="project2.html">Omnivat Tower</a></li>
+              <li><a href="project2.html">Omniyat Tower</a></li>
               <li><a href="project3.html">Rehabilitation Prison</a></li>
               <li><a href="project4.html">Senior Club</a></li>
+              <li><a href="project5.html">Mosque in dubai</a></li>
               <li><a href="project6.html">Obhour Neighborhood</a></li>
             </ul>
           </div>
 
           <!-- Contact Column -->
-          <div class="footer-contact-col">
+          <div class="footer-contact-box footer-contact-col">
             <h4 class="footer-heading">Connect With Us</h4>
             <div class="footer-contact">
               <p>
                 <i class="fas fa-map-marker-alt"></i>
-                <span>Cairo, Egypt</span>
+                <span>New Cairo ,Cairo, Egypt</span>
               </p>
               <p>
                 <i class="fas fa-phone-alt"></i>
@@ -751,15 +753,19 @@
               </p>
               <p>
                 <i class="fas fa-envelope"></i>
-                <span>info@archvision.com</span>
+                <span>mahmoudfayed3897@gmail.com</span>
               </p>
             </div>
             <div class="footer-social">
               <div class="footer-social_circle">
-                <a href="#" aria-label="visit my LinkedIn profile"><i class="fab fa-linkedin-in"></i></a>
+                <a href="https://www.linkedin.com/in/mah-fayed/" target="_blank" aria-label="visit my LinkedIn profile"
+                  ><i class="fab fa-linkedin-in"></i
+                ></a>
               </div>
               <div class="footer-social_circle">
-                <a href="#" aria-label="visit my Behance"><i class="fab fa-behance"></i></a>
+                <a href="https://www.behance.net/mahmoudfayedd" target="_blank" aria-label="visit my Behance"
+                  ><i class="fab fa-behance"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -769,8 +775,8 @@
         <!-- start bottom footer -->
         <div class="footer-bottom">
           <p>
-            &copy; 2025 ARCH•VISION. All rights reserved. | Crafting the future,
-            one structure at a time.
+            &copy; 2025 <strong>Mahmoud Fayed</strong> | All designs and
+            concepts are the intellectual property of the architect.
           </p>
         </div>
         <!-- end bottom footer -->
