--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 >
                   <img
                     class="img-fluid rounded-circle"
-                    src="assets/images/profile.png"
+                    src="assets/images/profile.webp"
                     alt="Fayed Image."
                     loading="lazy"
                   />
@@ -633,15 +633,18 @@
                 <div
                   class="other-icons d-flex justify-content-center align-items-center"
                 >
-                  <div
+                  <a
+                    href="http://wa.me/+201015395516"
+                    target="_blank"
                     class="contact-icon d-flex justify-content-center align-items-center rounded-circle my-4"
                   >
                     <i class="fa-brands fa-whatsapp"></i>
-                  </div>
+                  </a>
                 </div>
                 <h4>WhatsApp</h4>
                 <a href="http://wa.me/+201015395516" target="_blank">
-                  Open WhatsApp</a>
+                  Open WhatsApp</a
+                >
               </div>
             </div>
             <div class="col-lg-3 col-md-6">
@@ -649,11 +652,12 @@
                 <div
                   class="other-icons d-flex justify-content-center align-items-center"
                 >
-                  <div
+                  <a
+                    href="mailto:mahmoudfayed3897@gmail.com"
                     class="contact-icon d-flex justify-content-center align-items-center rounded-circle my-4"
                   >
                     <i class="fa-solid fa-envelope"></i>
-                  </div>
+                  </a>
                 </div>
                 <h4>Email</h4>
                 <a href="mailto:mahmoudfayed3897@gmail.com"
@@ -666,11 +670,12 @@
                 <div
                   class="other-icons d-flex justify-content-center align-items-center"
                 >
-                  <div
+                  <a
+                    href="tel:+201015395516"
                     class="contact-icon d-flex justify-content-center align-items-center rounded-circle my-4"
                   >
                     <i class="fa-solid fa-phone"></i>
-                  </div>
+                  </a>
                 </div>
                 <h4>Phone</h4>
                 <a href="tel:+201015395516">+201015395516</a>
@@ -681,14 +686,18 @@
                 <div
                   class="other-icons d-flex justify-content-center align-items-center"
                 >
-                  <div
+                  <a
+                    href="https://www.linkedin.com/in/mah-fayed/"
+                    target="_blank"
                     class="contact-icon d-flex justify-content-center align-items-center rounded-circle my-4"
                   >
                     <i class="fa-brands fa-linkedin"></i>
-                  </div>
+                  </a>
                 </div>
                 <h4>LinkedIn</h4>
-                <a href="https://www.linkedin.com/in/mah-fayed/" target="_blank">Mahmoud Fayed</a>
+                <a href="https://www.linkedin.com/in/mah-fayed/" target="_blank"
+                  >Mahmoud Fayed</a
+                >
               </div>
             </div>
           </div>
@@ -758,12 +767,18 @@
             </div>
             <div class="footer-social">
               <div class="footer-social_circle">
-                <a href="https://www.linkedin.com/in/mah-fayed/" target="_blank" aria-label="visit my LinkedIn profile"
+                <a
+                  href="https://www.linkedin.com/in/mah-fayed/"
+                  target="_blank"
+                  aria-label="visit my LinkedIn profile"
                   ><i class="fab fa-linkedin-in"></i
                 ></a>
               </div>
               <div class="footer-social_circle">
-                <a href="https://www.behance.net/mahmoudfayedd" target="_blank" aria-label="visit my Behance"
+                <a
+                  href="https://www.behance.net/mahmoudfayedd"
+                  target="_blank"
+                  aria-label="visit my Behance"
                   ><i class="fab fa-behance"></i
                 ></a>
               </div>
